--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,49 @@
+/*
+    Author: Ajala AbdulSamii Olalekan
+    Email: kgasta@gmail.com
+    Github: github.com/jalasem
+    Note: I have written some custom css here to help you through your design
+*/
+
 nav>.container {
     width: 95%;
+}
+
+/*font size adjustments
+    in your html you can use them for icons and text
+    e.g <i class="icon ion-social-facebook x15"></i> to adjut the font-size of the icon to 1.5rem
+*/
+.x1 {
+    font-size: 1rem;
+}
+.x15 {
+    font-size: 1.5rem;
+}
+.x2 {
+    font-size: 2rem;
+}
+.x25 {
+    font-size: 2.5rem;
+}
+.x3 {
+    font-size: 3rem;
+}
+.x35 {
+    font-size: 3.5rem;
+}
+.x4 {
+    font-size: 4rem;
+}
+.x45 {
+    font-size: 4.5rem;
+}
+.x5 {
+    font-size: 5rem;
+}
+.x55 {
+    font-size: 5.5rem;
+}
+
+ul.social i.icon {
+    margin-right: 1rem;
 }
